syntax = "proto3";

package net.protobufs;

import "google/api/annotations.proto";

option java_multiple_files = true;
option java_package = "dev.protobufs";

service GrpcService {
    rpc helloWorld (HelloRequest) returns (HelloResponse) {
        option (google.api.http) = {
            post: "/api/hi1"
            body: "name"
        };
    }
    rpc goodbyeWorld (GoodbyeRequest) returns (GoodbyeResponse) {
        option (google.api.http) = {
            post: "/api/hi2"
            body: "name"
        };
    }  
}

service GrpcDynamicService {
    rpc sayHi (HelloRequest) returns (HelloResponse) {
        option (google.api.http) = {
            post: "/cloud/sayHi"
            body: "name"
        };  
    }
}

service GrpcReactiveService {
    rpc areYouSure (HelloRequest) returns (HelloResponse) {
        option (google.api.http) = {
            post: "/reactive/ays"
            body: "name"
        };
    }
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

message GoodbyeRequest {
    string name = 1;
}

message GoodbyeResponse {
    string message = 1;
}

